fixed wrong width

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -35,7 +35,7 @@ body {
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(1, 1fr);
-  max-width: 70%;
+  max-width: 80%;
   margin: 0 auto;
   @include tablet() {
     grid-template-columns: repeat(2, 1fr);
